@@ -1,6 +1,10 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:
 
+2014-01-24 Michael Truog   <mjtruog [at] gmail (dot) com>
+
+    * Add the cloudi_service_api:priority() type
+
 2014-01-22 Michael Truog   <mjtruog [at] gmail (dot) com>
 
     * Add source-address and source-port to the RequestInfo provided by
